# CUDA-Experiments

./: .gitignore  LICENSE  README.md
problem 3 bfs/: Makefile  README.md  bfs_cuda.cu  bfs_seq.cpp  create_graph.cpp
problem 3 bfs/results/: graph2.txt  graph3.txt  ilab_graph2.txt
problem 3 prims/: Makefile  graph.txt  graph1.txt  prims_seq.cpp
problem 3 prims/results/: graph1.txt  graph3.txt
problem_1/: makefile  stats.cu
problem_2/: .gitignore  CMakeLists.txt  LICENSE  Readme.md
problem_2/libs/logger/: logger.h
problem_2/part 1 and 2/: Makefile  main.cpp  matrix.cu  matrix.cuh  matrix.h
problem_2/part 3 and 4/: Makefile  mm_main.cu  mmm_unrolled.cuh  speed_up_graphs.asv  speed_up_graphs.m
problem_2/part 3 and 4/speed_up_tesla_k40m/: speed_up_for_1024_element_matrix.csv  speed_up_for_128_element_matrix.csv  speed_up_for_2048_element_matrix.csv  speed_up_for_256_element_matrix.csv  speed_up_for_512_element_matrix.csv
problem_2/part 3 and 4/speed_up_tesla_k80m/: speed_up_for_1024_element_matrix.csv  speed_up_for_128_element_matrix.csv  speed_up_for_2048_element_matrix.csv  speed_up_for_256_element_matrix.csv  speed_up_for_512_element_matrix.csv
problem_2/src/: main.cpp  matrix.cu  matrix.cuh  matrix.h
problem_2/test/: test.cpp
problem_3/problem 3 bfs/: bfs_cuda.cu  bfs_seq.cpp  graph.txt
problem_3/problem 3 bfs/results/: graph1.txt
problem_3/problem 3 prims/: Makefile  create_graph_weighted.cpp  prims_cuda.cu
problem_3/problem 3 prims/results/: graph2.txt
problem_4/: Problem4.cu
problem_5/: Makefile  brute_forcer.cu  md5.cu
problem_5_grp_3/: brute_forcer  brute_forcer.cuh
